(lang dune 3.8)

(using melange 0.1)

(name melange-examples)

(license "MIT")

(maintainers "The Melange community")

(authors "The Melange community")

(homepage https://github.com/melange-re/melange-examples)

(bug_reports https://github.com/melange-re/melange-examples/issues)

(package
 (allow_empty)
 (name melange-examples)
 (synopsis "Melange examples")
 (description "A collection of examples and demo projects using Melange"))
