(lang dune 3.8)

(using melange 0.1)

(generate_opam_files true)

(name 4-dream-atd)

(license "MIT")

(maintainers <your_name>)

(authors <your_name>)

(homepage https://github.com/your/project)

(bug_reports https://github.com/your/project/issues)

(package
 (name 4-dream-atd)
 (synopsis "Melange React example")
 (description "Minimal React example with Melange")
 (depends
  (melange
   (>= "2.0.0"))
  (reason
   (>= "3.10.0"))
  (reason-react
   (>= "0.13.0"))
  reason-react-ppx
  dream
  atdgen
  (ocaml-lsp-server :with-test) ; todo: use with-dev-setup once opam 2.2 is out
  (opam-check-npm-deps :with-test) ; todo: use with-dev-setup once opam 2.2 is out
  (ocamlformat :with-test) ; todo: use with-dev-setup once opam 2.2 is out
  ))
